# shopping-ai

./: README.md
backend/: pyproject.toml  shop.db
backend/app/: main.py
backend/app/db/: session.py
backend/app/models/: chat_model.py  product_model.py
backend/app/routes/: agent_route.py  chat_route.py  product_route.py
backend/app/schemas/: product_schema.py
backend/app/services/: agent_service.py  chat_service.py  product_service.py
backend/app/tools/: product_tools.py
backend/app/utils/: agent_build_chain.py  build_chain.py
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/Products/: db.ts  index.tsx
frontend/src/common/TypingIndicator/: index.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/Messages/: index.tsx
frontend/src/components/Ratings/: index.tsx
