[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.48.0",
]
